test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/trait_decl_assoc_fn.sw
library;

trait T {
    #[inline(invalid)]
    #[trace(invalid)]
    #[test(invalid)]
    #[payable(invalid)]
    //! Invalid inner comment.
    #[deprecated(invalid)]
    #[fallback(invalid)]
    #[error_type(invalid)]
    #[error(invalid)]
    fn trait_assoc_fn();
} 

